@@ -21,6 +21,10 @@ Post-v3.1.0
      * ovs-vswitchd will keep the CAP_SYS_RAWIO capability when started
        with the --hw-rawio-access command line option.  This allows the
        process extra privileges when mapping physical interconnect memory.
+   - ovs-appctl:
+     * New commands "dpctl/{ct-get-sweep-next-run,ct-set-sweep-next-run}" that
+       allow to get and set, for the userspace datapath, the next run interval
+       for the conntrack garbage collector.
 
 
 v3.1.0 - 16 Feb 2023
